# reynard_the_robot_ros2

./: README.md
reynard_the_robot_ros2/: package.xml  setup.cfg  setup.py
reynard_the_robot_ros2/examples/: reynard_the_robot_ros2_client.py
reynard_the_robot_ros2/launch/: reynard_the_robot_ros2.launch
reynard_the_robot_ros2/reynard_the_robot_ros2/: reynard_the_robot_ros2.py
reynard_the_robot_ros2_msgs/: CMakeLists.txt  package.xml
reynard_the_robot_ros2_msgs/msg/: ReynardState.msg
reynard_the_robot_ros2_msgs/srv/: Drive.srv  GetColor.srv  GetPosition.srv  SetColor.srv  SetPosition.srv  Teleport.srv
